# chatgpt-anonymizer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
services/local-engine/: AGENTS.md  README.md  pyproject.toml
services/local-engine/services/local-engine/.engine-state/: installation.secret
services/local-engine/src/chatgpt_anonymizer_local_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/local-engine/src/local_engine/: main.py
services/local-engine/src/local_engine/api/: health.py  revert.py  sanitize.py  sessions.py
services/local-engine/src/local_engine/core/: policies.py  risk_scoring.py  service.py  session_manager.py
services/local-engine/src/local_engine/crypto/: key_management.py  mapping_crypto.py
services/local-engine/src/local_engine/detectors/: dictionary_detector.py  extended_detector.py  financial_detector.py  heuristic_detector.py  ml_detector.py  regex_detector.py  registry.py  secrets_detector.py
services/local-engine/src/local_engine/models/: api_models.py  (+2 more)
services/local-engine/tests/fixtures/: sample_clipboard.txt
services/local-engine/tests/integration/: test_api.py
services/local-engine/tests/unit/: test_domain_models.py  test_encrypted_store.py  test_extended_detector.py  test_financial_detector.py  test_mapping_crypto.py  test_ml_detector.py  test_policies.py  test_process_lock.py  test_regex_detector.py  test_replacement_planner.py  test_secrets_detector.py  test_session_manager.py
(+98 files in other folders)
