[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-anonymizer-local-engine"
version = "0.1.0"
description = "Local FastAPI engine for ChatGPT clipboard anonymization"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "cryptography>=45.0.0,<46.0.0",
  "fastapi>=0.116.1,<1.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "starlette>=0.46.2,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.2,<9.0.0",
  "ruff>=0.12.11,<0.13.0"
]

[project.scripts]
chatgpt-anonymizer-engine = "local_engine.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
